feat: GraphConfig 조건부엣지 타입오류 수정